<resources>
    <string name="app_name">alc-MMSystem-admin</string>
    <string name="title_about">About</string>
    <string name="title_social">Social</string>
    <string name="text_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent dignissimpharetra metus, ut cursus purus efficitur et. Duis ac enim tellus. Phasellus eget tortor dapibus, laoreet mauris sed, dignissim lectus. Phasellus eget tortor dapibus, laoreet mauris sed, dignissim lectus. </string>
    <string name="menu_edit_profile">Edit Profile</string>
    <string name="set_profile_pic">Set a profile picture</string>
    <string name="button_select_file">Select file</string>
    <string name="hint_full_name">Full Name *</string>
    <string name="hint_headline">Headline</string>
    <string name="hint_about">About</string>
    <string name="hint_website">Website</string>
    <string name="hint_country">Country</string>
    <string name="hint_city">City</string>
    <string name="hint_github">Github</string>
    <string name="hint_instagram">Instagram</string>
    <string name="hint_linkdein">LinkedIn</string>
    <string name="hint_twitter">Twitter</string>
    <string name="button_save">Save</string>
    <string name="button_undo">Undo</string>
    <string name="button_send">Send</string>
    <string name="button_delete">Delete</string>
    <string name="home_title">Home</string>
    <string name="search_title">Search</string>
    <string name="programs_title">Programs</string>
    <string name="messages_title">Messages</string>
    <string name="profile_title">Profile</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="mentor_manger_title">Mentor Managers</string>
    <string name="messages">Messages</string>
    <string name="all_mentor_manger">All mentor managers</string>
    <string name="fab_add_mentor_manger">Add mentor manger</string>
    <string name="mentor_title">Mentor</string>
    <string name="all_mentor">All mentor</string>
    <string name="fab_add_mentor">Add mentor</string>
    <string name="menu_chat">Chat</string>
    <string name="about">About</string>
    <string name="mentors">Mentors</string>
    <string name="tasks">Tasks</string>
    <string name="reports">Reports</string>
    <string name="certificates">Certificates</string>
    <string name="image_certificate_content_description">Mentor Manager Certificate</string>
    <string name="image_task_content_description">Task Icon</string>
    <string name="all_tasks">All Tasks</string>
    <string name="task_assign">Assign Task</string>
    <string name="task_assigned">Assigned</string>
    <string name="task_completed">Completed</string>
    <string name="all_programs">All Programs</string>
    <string name="all_reports">All Reports</string>
    <string name="download_certificate">Download as</string>
    <string name="button_download">Download</string>
    <string name="add_icon">Add Icon</string>
    <string name="program_image">Program image</string>
    <string-array name="filter_notifications">
        <item>All</item>
        <item>Mentor</item>
        <item>Admin</item>
    </string-array>
    <string name="programs_chip_all">All</string>
    <string name="programs_chip_active">Active</string>
    <string name="programs_chip_completed">Completed</string>
    <string name="program_new_title">Create New Program</string>
    <string name="set_program_avatar">Set a program avatar</string>
    <string name="select_file">Select file</string>
    <string name="program_name">Program Name</string>
    <string name="program_description">Program Description</string>
    <string name="program_add_mentor_manager">Add Mentor Manager</string>
    <string name="program_add_mentor">Add Mentor</string>
    <string name="program_set_criteria">Set Criteria</string>
    <string name="program_selected">Selected</string>
    <string name="button_select">Select</string>
    <string name="button_create_program">Create Program</string>
    <string name="program_details_title">Google Africa Scholarship Program</string>
    <string name="programs_menu_button_text">Program Reports</string>
    <string name="edit_program_button">Edit Program</string>
    <string name="delete_archive_program">Delete/Archive Program</string>
    <string name="mentor_manager_program_card">Mentor Managers assigned to this program</string>
    <string name="mentor_program_card">Mentors assigned to this program</string>
    <string name="report_program_card">Program Reports</string>
    <string name="task_program_card">Program Tasks</string>
    <string name="view_button">View</string>
    <string name="task_report_max_button">Maximum</string>
    <string name="task_report_sort_button">Sort</string>
    <string name="task_reports_title">Task Reports</string>
    <string name="reports_title">Program Reports</string>
    <string-array name="reports_string_array">
        <item>All Reports</item>
        <item>Program Reports</item>
        <item>Task Reports</item>
    </string-array>
    <string name="program_report_title">Google Africa Scholarship Program Report</string>
    <string name="achievements_title">Major Achievements</string>
    <string name="blocker_title">Major Blocker</string>
    <string name="recommendations_title">Major Recommendations</string>
    <string name="button_share">Share</string>
    <string name="button_cancel">Cancel</string>
    <string name="share_report">Share report</string>
    <string name="download_report">Download report</string>
    <string name="report_share_dialog_message">Share report via email</string>
    <string name="report_download_dialog_success_message">Report Downloaded Successfully!</string>
    <string name="create_program_dialog_success_message">Program Created Successfully!</string>
    <string name="archive_program_dialog_message">Program Archived!</string>
    <string name="button_open_email">Open Email App</string>
    <string name="button_done">Done</string>
    <string name="criteria_setup_title">Criteria Setup</string>
    <string name="criteria_setup_create">Create Criteria</string>
    <string name="criteria_setup_create_successful">Criteria Created Successfully!</string>
    <string name="criteria_setup_add">Add Criteria</string>
    <string name="choose">Choose</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="criteria_input_selection_title">Select Input Type</string>
    <string name="criteria_input_single">Single Input</string>
    <string name="criteria_input_yes_no">Yes/No</string>
    <string name="criteria_input_file">File Input</string>
    <string name="criteria_input_multiple">Multiple Input</string>
    <string name="criteria_input_multi_choice">Multi choice</string>
    <string name="criteria_multi_choice_title">Input Multiple Select Options</string>
    <string name="criteria_multiple_inputs_title">Input Question</string>
    <string name="criteria_add_choice">Add another choice</string>
    <string name="criteria_delete_choice">delete multi-choice input</string>
    <string name="criteria_edit_choice">edit multi-choice input</string>
    <string-array name="inputs_string_array">
        <item>2 Inputs</item>
        <item>3 Inputs</item>
        <item>4 Inputs</item>
    </string-array>
    <string name="criteria_add_question">Add another question</string>
    <string name="criteria_single_input_title">Input Single Question</string>
    <string name="criteria_yesno_input_title">Input Yes or No Question</string>
    <string name="criteria_file_input_title">Input File Request</string>
    <string name="criteria_delete_files">Delete file inputs</string>
    <string name="file_Qty">Qty</string>
    <string name="file_type">Type</string>
    <string name="add_field">Add field</string>
    <string name="file_name">File name</string>
    <string name="cricteria_delete_files">delete files input</string>
    <string name="criteria_edit_files">edit files input</string>
    <string-array name="file_type_array">
        <item>pdf</item>
        <item>doc</item>
        <item>xls</item>
    </string-array>
    <string-array name="file_qty_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="delete_button">delete button</string>
    <string name="edit_button">edit button</string>
    <string name="close_button">close page</string>
    <string name="report_spinner_description">Filter reports spinner</string>
    <string name="no_email_app_available">No email app available on this device</string>
    <string name="mentor_mana">Mentor Management System</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_message">An email has been sent to your registered email. Follow the link to reset your password</string>
    <string name="done">Done</string>
    <string name="login">Login</string>
    <string name="set_new_password">Set New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="your_new_password_must_differ_from_previously_used_password">*Your new password must differ from previously used password.</string>
    <string name="password_reset_successful">Password Reset Successful</string>
    <string name="program_asst">PROGRAM ASST.</string>
    <string name="mentor_gad">MENTOR-GAD</string>
    <string name="share_title">share</string>
    <string name="add_mentor">Add Mentor</string>
    <string name="add_mentors">Add Mentors</string>
    <string name="send">Send</string>
    <string name="all_mentors">All Mentors</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="this_is_a_tab_layout">This is a tab layout</string>
    <string name="chat_with_mentor">Chat With Mentor</string>
    <string name="technical_proficiency">Technical Proficiency</string>
    <string name="bio">Bio</string>
    <string name="been_a_mentor_before">Been a Mentor Before?</string>
    <string name="delete_mentor">Delete Mentor</string>
    <string name="peculiar_umeh">\@peculiar.umeh</string>
    <string-array name="mentor_dropdown_text">
        <item>All Mentors</item>
        <item>Assigned</item>
        <item>Unassigned</item>
    </string-array>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="task_title">Task</string>
    <string name="assign_task_button">Assign to task</string>
    <string name="unassigned_task_button">Unassigned to task</string>
    <string name="report_achievements_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit magna interdum eu. Curabitur pellentesque nibh nibh, at maximus ante fermentum sit amet. Pellentesque commodo lacus at sodales sodales. Quisque sagittis orci ut diam condimentum, vel euismod erat placerat. </string>
</resources>