<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/question_textview"
        style="@style/regularMuktaLargeFontBlack2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/input_radio_groupe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_textview">

        <RadioButton
            android:id="@+id/yes_radio_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/mms_pry_2"
            android:checked="true"
            android:text="@string/yes" />

        <RadioButton
            android:id="@+id/no_radio_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/mms_pry_2"
            android:text="@string/no" />
    </RadioGroup>

    <ImageButton
        android:id="@+id/item_delete_yesno_input_button"
        style="@style/circleMinusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/delete_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_radio_groupe" />

    <ImageButton
        android:id="@+id/item_edit_yesno_input_button"
        style="@style/editIconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/edit_button"
        app:layout_constraintEnd_toStartOf="@+id/item_delete_yesno_input_button"
        app:layout_constraintTop_toBottomOf="@+id/input_radio_groupe" />


</androidx.constraintlayout.widget.ConstraintLayout>