<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ForgotPasswordMessageFragment">


    <TextView
        android:id="@+id/forgotPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:fontFamily="@font/mukta_extra_bold"
        android:gravity="center_horizontal"
        android:text="@string/forgot_password_title"
        android:textColor="@color/black2"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgotPasswordMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="56dp"
        android:fontFamily="@font/mukta_regular"
        android:gravity="center"
        android:text="@string/forgot_password_message"
        android:textColor="@color/black3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTitle" />

    <Button
        android:id="@+id/button_done"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:textAllCaps="false"
        android:fontFamily="@font/mukta_semi_bold"
        android:textSize="18sp"
        android:text="@string/done"
        app:layout_constraintEnd_toEndOf="@+id/forgotPasswordMessage"
        app:layout_constraintStart_toStartOf="@+id/forgotPasswordMessage"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordMessage" />

</androidx.constraintlayout.widget.ConstraintLayout>